fixed dashboard container responsive and hide on small view

--- a/client/src/scss/_config.scss
+++ b/client/src/scss/_config.scss
@@ -30,8 +30,9 @@ $spaceamounts: (1, 2, 3, 4, 5);
   }
 
   // Vertical margin
-  .my-#{$space} {
-    margin: #{$space}rem 0;
+  .my-1,
+  .my-2 {
+    margin: 2rem;
   }
   // all around padding
   .p-#{$space} {
