--- a/client/src/scss/_form.scss
+++ b/client/src/scss/_form.scss
@@ -1,4 +1,5 @@
 .form {
+  padding: 3rem;
   &-group {
     margin: 1.2rem 0;
   }
