--- a/client/src/scss/style.css
+++ b/client/src/scss/style.css
@@ -2,8 +2,9 @@
   margin: 1rem;
 }
 
-.my-1 {
-  margin: 1rem 0;
+.my-1,
+.my-2 {
+  margin: 2rem;
 }
 
 .p-1 {
@@ -18,8 +19,9 @@
   margin: 2rem;
 }
 
+.my-1,
 .my-2 {
-  margin: 2rem 0;
+  margin: 2rem;
 }
 
 .p-2 {
@@ -34,8 +36,9 @@
   margin: 3rem;
 }
 
-.my-3 {
-  margin: 3rem 0;
+.my-1,
+.my-2 {
+  margin: 2rem;
 }
 
 .p-3 {
@@ -50,8 +53,9 @@
   margin: 4rem;
 }
 
-.my-4 {
-  margin: 4rem 0;
+.my-1,
+.my-2 {
+  margin: 2rem;
 }
 
 .p-4 {
@@ -66,8 +70,9 @@
   margin: 5rem;
 }
 
-.my-5 {
-  margin: 5rem 0;
+.my-1,
+.my-2 {
+  margin: 2rem;
 }
 
 .p-5 {
@@ -84,6 +89,8 @@
   margin: auto;
   overflow: hidden;
   margin-bottom: 3rem;
+  margin-top: 4rem;
+  padding: 2rem;
 }
 
 .x-large {
@@ -243,14 +250,22 @@
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.table {
+  padding-left: 2rem;
+}
+
 .table th,
 .table td {
   padding: 1rem;
-  text-align: left;
+  text-align: center;
 }
 
 .table th {
-  background: #f4f4f4;
+  background: #99e6e6;
+}
+
+.form {
+  padding: 3rem;
 }
 
 .form-group {
